Resolves: tdf#122949 gtk_style_context_save doesn't work the way I want

so write something that does

Change-Id: I294b9288af0ddf49cbb5a8a69b4509e1ae03d9b8
Reviewed-on: https://gerrit.libreoffice.org/67018
Tested-by: Xisco Faulí <xiscofauli@libreoffice.org>
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>